Web is Compleate to Run

--- a/index.html
+++ b/index.html
@@ -7,10 +7,138 @@
     <title>Online Flower shop</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
 
+    <header>
+        <div class="banner">
+            <div class="banner-text">
+                <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                <p class="banner-disc">
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.
+                </p>
+                <button class="btn">
+                    Shop Now
+                </button>
+            </div>
+            <div class="banner-img">
+                <img class="banner-flower" src="assets/pngwing 10.png" alt="">
+            </div>
+        </div>
+    </header>
 
 
-    
+
+    <main>
+        <section>
+            <div class="section-info">
+                <h1 class="section-title">Our Featured Flowers</h1>
+                <p class="section-disc">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when
+                    looking at its layout.</p>
+            </div>
+
+            <div class="flowers-container">
+
+                <div class="flower">
+                    <div class="flower-img flowerColor-1">
+                        <img src="assets/pngwing 6.png" alt="">
+                    </div>
+                    <p class="flowertitle">
+                        Pink Flower Tree
+                    </p>
+                </div>
+                <div class="flower">
+                    <div class="flower-img flowerColor-2">
+                        <img src="assets/pngwing 5.png" alt="">
+                    </div>
+                    <p class="flowertitle">
+                        Red Flower Tree
+                    </p>
+                </div>
+                <div class="flower">
+                    <div class="flower-img flowerColor-3">
+                        <img src="assets/pngwing 7.png" alt="">
+                    </div>
+                    <p class="flowertitle">
+                        Yellow Flower Tree
+                    </p>
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+        </section>
+
+
+        <section class="hotDeal">
+            <div class="hotInfos">
+                <h1 class="hot-title">Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+                <p class="hot-disc">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when
+                    looking at its layout.</p>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="hot-Img">
+                <img src="assets/pngwing 8.png" alt="">
+            </div>
+        </section>
+
+
+        <section class="Instagram-Section">
+            <div class="section-info">
+                <h1 class="section-title">Instagram</h1>
+                <p class="section-disc">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+            </div>
+
+            <div class="img-container">
+                <img src="assets/Flower 01.png" alt="">
+                <img src="assets/Rectangle 4.png" alt="">
+                <img src="assets/Rectangle 5.png" alt="">
+                <img src="assets/Rectangle 6.png" alt="">
+            </div>
+
+
+        </section>
+
+        <section class="latest">
+            <div class="newsletter-main">
+                <h1 class="new-title">Get The Latest Deals</h1>
+                <p class="new-disc">$30 coupon for first shopping</p>
+                <form class="from">
+                    <input type="email" name="email" placeholder="Enter your email here....">
+                    <button class="btn">Subscribe</button>
+                </form>
+            </div>
+
+        </section>
+
+
+
+
+    </main>
+
+    <footer>
+        <div class="information">
+            <h1 class="footer-title"><span>Flower</span>Shop</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+                <p class="copytxt">&copy; 2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
+    </footer>
+
+
+
+
+
 </body>
+
 </html>
